@@ -36,16 +36,15 @@ namespace Gtk
  * embedded Clutter::Stage actor. This is needed for Clutter to be able to
  * paint on the Clutter::Gtk::Embed widget.
  */
-class Embed :
-  public ::Gtk::Container
+class Embed : public ::Gtk::Container
 {
-  _CLASS_GTKOBJECT(Embed, GtkClutterEmbed, GTK_CLUTTER_EMBED, ::Gtk::Container, GtkContainer)
+  _CLASS_GOBJECT(Embed, GtkClutterEmbed, GTK_CLUTTER_EMBED, ::Gtk::Container, GtkContainer)
 
 public:
   _CTOR_DEFAULT
 
-#m4 _CONVERSION(`ClutterActor*',`Glib::RefPtr<Stage>',`Glib::wrap(CLUTTER_STAGE($3), false)')
-#m4 _CONVERSION(`ClutterActor*',`Glib::RefPtr<const Stage>',`Glib::wrap(CLUTTER_STAGE($3), false)')
+#m4 _CONVERSION(`ClutterActor*',`Glib::RefPtr<Stage>',`Glib::wrap(CLUTTER_STAGE(($3)), false)')
+#m4 _CONVERSION(`ClutterActor*',`Glib::RefPtr<const Stage>',`Glib::wrap(CLUTTER_STAGE(($3)), false)')
   _WRAP_METHOD(Glib::RefPtr<Stage> get_stage(), gtk_clutter_embed_get_stage, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Stage> get_stage() const, gtk_clutter_embed_get_stage, refreturn, constversion)
 };
